styles.css
@font-face {
  font-family: 'Archia';
  font-weight: 300;
  font-display: swap;
  src: url(./fonts/Archia-Light.otf);
}

@font-face {
  font-family: 'Archia';
  font-weight: 500;
  font-display: swap;
  src: url(./fonts/Archia-Medium.otf);
}

@font-face {
  font-family: 'Chap';
  font-weight: 300;
  font-display: swap;
  src: url(./fonts/Chap-Light.otf);
}

@font-face {
  font-family: 'Chap';
  font-style: italic;
  font-weight: 300;
  font-display: swap;
  src: url(./fonts/Chap-LightItalic.otf);
}

@font-face {
  font-family: 'Chap';
  font-weight: 500;
  font-display: swap;
  src: url(./fonts/Chap-Medium.otf);
}

@font-face {
  font-family: 'Chap';
  font-style: italic;
  font-weight: 500;
  font-display: swap;
  src: url(./fonts/Chap-MediumItalic.otf);
}

* {
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

body {
  padding: 80px;
  margin: 0 auto;
  max-width: 1280px;
}

h1, h2 {
  font-family: 'Chap';
  font-weight: 300;
  line-height: 1.2;
  text-transform: uppercase;
}

h1 {
  font-size: 80px;
  letter-spacing: -3.2px;
  width: 50vw;
  max-width: 640px;
  margin-bottom: 40px;
  color: #D22D2D;
}

h1 strong {
  font-style: italic;
}

h2 {
  font-size: 56px;
  letter-spacing: -2px;
  margin-bottom: 24px;
  color: #476B4B;
}

p, a, li {
  font-family: 'Archia';
  font-weight: 300;
  font-size: 24px;
  line-height: 40px;
  color: #476B4B;
}

ul {
  list-style: none;
}

ol {
  list-style: decimal;
}

li:nth-child(n+2){
  margin-top: 16px;
}

strong {
  font-weight: 500;
}

.logo {
  width: 130px;
  height: 36px;
}

section {
  padding: 80px 0;
}

/* Header */

header {
  padding-top: 80px;
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
}

/* Title + Description */

header .title {
  z-index: 2;
}

header .title p {
  width: calc(50w - 64px);
  max-width: 400px;
  padding-left: 64px;
}

.receipe-description {
  width: calc(50% - 240px);
  max-width: 400px;
  padding-left: 64px;
}

/* Tags */

.tags {
  align-self: center  ;
}

.tag {
  background-color: #FBEFE9;
  padding: 4px 8px;
}

.tag:nth-child(n+2) {
  margin-left: 16px;;
}

/* Main Image */

.main-image-container {
  width: calc(50% + 80px);
  max-height: 200px;
  z-index: -10;
  margin-top: -64px;
}

.main-image-container .main-image {
  width: 100%;
}

/* Ingredients */

.ingredients {
  padding: 80px 96px 80px 64px;
  background-color: #FBEFE9;
  width: fit-content;
  min-width: 480px;
}

/* Method */

.method {
  margin-top: 80px;
  display: flex;
  justify-content: space-between;
  background: #ffffff;
}

.method-title {
  padding-left: 64px;
  max-width: calc(50% - 240px);
}

.method-contents {
  padding: 88px 96px;
  max-width: calc(50% - 160px);
}




@media only screen and (max-width: 1024px) {

  /* Universal */

  body {
    padding: 40px;
  }

  section {
    padding: 40px 0;
  }

  h1 {
    font-size: 64px;
  }

  h2 {
    font-size: 40px;
  }

  /* Header */
  
  .recipe-title, .receipe-description, .tags {
    width: 100%;
    max-width: 640px;
    padding-left: 0;
    margin: 0 0 16px 0;
  }

  .main-image-container {
    width: 100%;
    max-width: none;
    margin: 40px 0;
    max-height: none;
  }
  
  /* Ingredients */

  .ingredients {
    width: calc(100% - 64px);
    min-width: auto;
    padding: 40px 32px;
  }

  /* Method */

  .method {
    flex-direction: column;
    margin-top: 0;
  }

  .method-title, .method-contents {
    max-width: 100%;
    padding: 16px 32px;
  }

}

@media only screen and (max-width: 768px) {

  /* Universal */

  body {
    padding: 16px;
  }

  section {
    padding: 24px 0;
  }

}

